Migration to silex, testing

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -46,7 +46,7 @@
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-lg-12">
-                                <form id="login-form" action="auth.php" method="post" role="form" style="display: block;">
+                                <form id="login-form" action="auth" method="post" role="form" style="display: block;">
                                     <div class="form-group">
                                         <input type="text" name="login_username" id="login_username" tabindex="1" class="form-control" placeholder="Username" value="">
                                     </div>
@@ -74,7 +74,7 @@
                                         </div>
                                     </div>
                                 </form>
-                                <form id="register-form" action="auth.php" method="post" role="form" style="display: none;">
+                                <form id="register-form" action="auth" method="post" role="form" style="display: none;">
                                     <div class="form-group">
                                         <input type="text" name="register_username" id="register_username" tabindex="1" class="form-control" placeholder="Username" value="">
                                     </div>
